--- a/Documents/python-projects/inspirational_scraping/app/styles.css
+++ b/Documents/python-projects/inspirational_scraping/app/styles.css
@@ -4,13 +4,14 @@
 
 img { 
 	position:relative;
-	height:100%;
-	width:100%;
+/*	height:100%;
+	width:100%;*/
+  max-width: 100%;
 }
 
 body{
   width:100%;
-  height:50%;
+  height:100%;
 }
 
 h2 { 
