--- a/Documents/python-projects/inspirational_scraping/app/styles.css
+++ b/Documents/python-projects/inspirational_scraping/app/styles.css
@@ -41,6 +41,15 @@ h3 {
 
 
  @media only screen and (max-width: 767px) {
+    #images{
+    height:100%;
+  }
+
+
+  body{
+   
+    height:100%;
+  }
    img { 
     position:relative;
   height:100%;
