--- a/Documents/python-projects/inspirational_scraping/app/styles.css
+++ b/Documents/python-projects/inspirational_scraping/app/styles.css
@@ -43,14 +43,16 @@ h3 {
  @media only screen and (max-width: 767px) {
     #images{
     height:100%;
+    min-height: 100%;
   }
 
 
   body{
-   
+   min-height: 100%;
     height:100%;
   }
    img { 
+    min-height: 100%;
     position:relative;
   height:100%;
   }
