--- a/Documents/python-projects/inspirational_scraping/app/styles.css
+++ b/Documents/python-projects/inspirational_scraping/app/styles.css
@@ -2,6 +2,27 @@
   height:100%;
 }
 
+
+#images {
+position:fixed;
+left:-50%;
+top:-50%;
+width:200%;
+height: 200%;
+}
+
+#images img {
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+  right: 0; 
+  bottom: 0; 
+  margin: auto; 
+  min-width: 50%;
+  min-height: 50%;
+}
+
+
 img { 
 	position:relative;
 /*	height:100%;
@@ -39,7 +60,7 @@ h3 {
   	right:5%;
  }
 
-
+/*
  @media only screen and (max-width: 767px) {
     #images{
     height:100%;
@@ -50,4 +71,4 @@ h3 {
     min-height: 100%;
   height:100%;
   }
-}
+}*/
