--- a/Documents/python-projects/inspirational_scraping/app/styles.css
+++ b/Documents/python-projects/inspirational_scraping/app/styles.css
@@ -4,7 +4,7 @@
 
 
 #images {
-position:fixed;
+position:relative;
 left:-50%;
 top:-50%;
 width:200%;
@@ -12,7 +12,7 @@ height: 200%;
 }
 
 #images img {
-  position: absolute; 
+  position: relative; 
   top: 0; 
   left: 0; 
   right: 0; 
